[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/acquire
license = Affero General Public License v3
description = A tool to quickly gather forensic artifacts from disk images or a live system into a lightweight container
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
